--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -2,3 +2,4 @@
  * Global application theme.
  * Framework overrides and customization goes here.
  */
+@import "~@ng-select/ng-select/themes/default.theme.css";
